--- a/frcstreamdeck/build.gradle
+++ b/frcstreamdeck/build.gradle
@@ -73,7 +73,7 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'frcstreamdeck.networking.Program'
+    mainClass = 'frcstreamdeck.StreamDeckFrc'
 }
 
 tasks.named('test') {
